# python-project-49

./: Makefile  README.md  demo.cast  demo_script.sh  pyproject.toml
.ruff_cache/: .gitignore  def dec(func):.py
.ruff_cache/0.14.6/: 7852840634236851357
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
